--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.thoroldvix</groupId>
+			<artifactId>youtube-transcript-api</artifactId>
+			<version>0.4.0</version>
+		</dependency>
+
+
+
 
 
 	</dependencies>
